feature(core): Imagery uploaded

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Atlas</title>
-    <link rel="stylesheet" href="./css/mainpage.css">
+    <link rel="stylesheet" href="/mainpage.css">
 
     <style>
         .form-button {
@@ -20,7 +20,7 @@
 <body>
     <header class="navigationBar">
         <div class="logo-container">
-            <h2><img src="./TechAtlas_files/logo.png" height="50" width="200" alt="Sorry. Image Not Available!"></h2>
+            <h2><img src="/logo.png" height="50" width="62" alt="Sorry. Image Not Available!"></h2>
         </div>
 
 
@@ -62,7 +62,7 @@
     </center>
 
 
-   
+
 </body>
 
 </html>
