chore(theme): Mistake

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header class="navigationBar">
         <div class="logo-container">
-            <h2><img src="/logo.png" height="50" width="62" alt="Sorry. Image Not Available!"></h2>
+            <h2><img src="/img/logo.png" height="50" width="62" alt="Sorry. Image Not Available!"></h2>
         </div>
 
 
