chore(theme): Contact and about page links changed

--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -37,10 +37,10 @@
     <header class="nav-menubar">
         <div class="navigation-menu">
             <ul>
-                
+
                 <li class="navitem"><a href="./mainpage.html" class="link">Home</a> </li>
                 <li class="navitem"> <a href="./products.html" class="link">Cars</a> </li>
-                <li class="navitem"> <a href="./contact-page.html" class="link">Contact Us</a></li>
+                <li class="navitem"> <a href="contact-page.php" class="link">Contact Us</a></li>
                 <li class="navitem"> <a href="./about-us-page.html" class="link">About Us</a></li>
             </ul>
         </div>
@@ -52,6 +52,6 @@
             <a href="./mainpage.html" style="margin-top: 300pxs; color: blue;">Continue Shopping</a>
         </center>
     </section>
-    
+
 </body>
 </html>
